tests/misc/errors/handlebars/__snapshots__/jsfmt.spec.js.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`invalid.hbs error test 1`] = `
"Parse error on line 2:
<A >x, {{@name}
--------------^
Expecting 'CLOSE_RAW_BLOCK', 'CLOSE', 'CLOSE_UNESCAPED', 'OPEN_SEXPR', 'CLOSE_SEXPR', 'ID', 'OPEN_BLOCK_PARAMS', 'STRING', 'NUMBER', 'BOOLEAN', 'UNDEFINED', 'NULL', 'DATA', 'SEP', got 'INVALID' (2:0)
  1 | <A >
> 2 | x, {{@name}
  3 | "
`;

exports[`tilde-comments-1.hbs error test 1`] = `
"Parse error on line 1:
{{~}}
---^
Expecting 'ID', 'STRING', 'NUMBER', 'BOOLEAN', 'UNDEFINED', 'NULL', 'DATA', got 'CLOSE' (1:0)
> 1 | {{~}}
  2 | "
`;

exports[`tilde-comments-2.hbs error test 1`] = `
"Parse error on line 1:
{{~~}}
---^
Expecting 'ID', 'STRING', 'NUMBER', 'BOOLEAN', 'UNDEFINED', 'NULL', 'DATA', got 'CLOSE' (1:0)
> 1 | {{~~}}
  2 | "
`;
